{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 52,
  "lineage": "36e0ecf0-2e4a-beb3-a008-1d3879ae5d2a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_dev_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "4200",
                  "8080",
                  "8443",
                  "9200",
                  "5432",
                  "9000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:14:53.734-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/comp-468008/global/firewalls/dev-allow-dev-ports",
            "log_config": [],
            "name": "dev-allow-dev-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network",
            "priority": 1000,
            "project": "comp-468008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/firewalls/dev-allow-dev-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "utmstack-dev"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.utmstack_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:14:53.768-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/comp-468008/global/firewalls/dev-allow-internal",
            "log_config": [],
            "name": "dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network",
            "priority": 1000,
            "project": "comp-468008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/firewalls/dev-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "utmstack-dev"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.utmstack_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:14:53.773-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/comp-468008/global/firewalls/dev-allow-ssh",
            "log_config": [],
            "name": "dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network",
            "priority": 1000,
            "project": "comp-468008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/firewalls/dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "utmstack-dev"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.utmstack_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "utmstack_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "data-disk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/comp-468008/zones/asia-southeast2-a/disks/dev-utmstack-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250805",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/comp-468008/zones/asia-southeast2-a/disks/dev-utmstack-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "purpose": "multi-tenant-development"
            },
            "enable_display": false,
            "id": "projects/comp-468008/zones/asia-southeast2-a/instances/dev-utmstack-vm",
            "instance_id": "5586699951942258651",
            "label_fingerprint": "Bej6YIOnMR8=",
            "labels": {
              "environment": "dev",
              "purpose": "multi-tenant-development"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "enable-oslogin": "TRUE",
              "git-repo-url": "https://github.com/utmstack/UTMStack.git",
              "ssh-keys": "utmstack:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDdK+tZqa69CbkhXjqWRT6xHvSFDKfLYakr+q6LNcFs1kYe5tW0+uND0qZ9rVob1T+JN7ik/w3X0w5ymouPHmu4b+yJXGbJUBQVxHvOq+8ZfZvAJUjlV5PWI5RHtgVSUuSCNzu++kFoqvthxefDSWniNjlB3JT7kfJEatKhDxu3GB1tw5o/rN9AOYDZeVZQjI97CPb1IEN5gVdV6hqodcMP55EQvggh4bijKB8edFWh8oiXRDN3ixXmbm9foIpyNYHdLCExMXvxEx4zVAKnciBrNedskUXjzwisRmkJrvxtWOZ3ke8ycbhobjsXXOavEDY8tk7zhGiLeL5U7Knw/D+W3C5yOVzYl1/qLQG3Bw0entri0dYKivncHHi2TUPsC+oKwgn1hFo5LFEC3cQ8s1YY5xX3HdVWBj/vQfE26137 [...]
              "startup-script": "#!/bin/bash\n\n# UTMStack Multi-Tenant VM Startup Script\n# This script initializes a single GCP VM for multiple UTMStack tenants\n\nset -e\n\n# Configuration from metadata\nTENANTS_CONFIG=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/attributes/tenants-config\" -H \"Metadata-Flavor: Google\")\nGIT_REPO_URL=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/attributes/git-repo-url\" -H \"Metadata-Flavor: Google\" ||  [...]
              "tenants-config": "{\"tenant1\":{\"admin_email\":\"admin@tenant1.com\",\"description\":\"First tenant development environment\",\"domain\":\"tenant1.utmstack.local\"},\"tenant2\":{\"admin_email\":\"admin@tenant2.com\",\"description\":\"Second tenant development environment\",\"domain\":\"tenant2.utmstack.local\"}}"
            },
            "metadata_fingerprint": "fYsdIlOjYDI=",
            "name": "dev-utmstack-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.77.232",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/comp-468008/regions/asia-southeast2/subnetworks/dev-utmstack-subnet",
                "subnetwork_project": "comp-468008"
              }
            ],
            "project": "comp-468008",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/zones/asia-southeast2-a/instances/dev-utmstack-vm",
            "service_account": [
              {
                "email": "dev-utmstack-sa@comp-468008.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "multi-tenant",
              "utmstack-dev"
            ],
            "tags_fingerprint": "Jk3pzgudJE0=",
            "terraform_labels": {
              "environment": "dev",
              "purpose": "multi-tenant-development"
            },
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "attached_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_disk.utmstack_data_disk",
            "google_compute_network.utmstack_network",
            "google_compute_subnetwork.utmstack_subnet",
            "google_service_account.utmstack_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "utmstack_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/comp-468008/global/networks/dev-utmstack-network",
            "mtu": 0,
            "name": "dev-utmstack-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3445127192553836520",
            "project": "comp-468008",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "utmstack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-10T03:14:54.503-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/comp-468008/regions/asia-southeast2/subnetworks/dev-utmstack-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "dev-utmstack-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/comp-468008/global/networks/dev-utmstack-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "comp-468008",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/comp-468008/regions/asia-southeast2/subnetworks/dev-utmstack-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.utmstack_network"
          ]
        }
      ]
    }
  ]
}